Use new URI().toURL() instead of new URL()