@@ -8,6 +8,8 @@ import java.io.IOException;
 import java.io.InputStreamReader;
 import java.io.OutputStream;
 import java.net.HttpURLConnection;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.util.HashMap;
@@ -16,31 +18,31 @@ public class WebRequests {
     // Cache responses for previously fetched API requests
     private final static HashMap<String, String> cache = new HashMap<>();
 
-    public static String getText(String endpoint) throws IOException {
+    public static String getText(String endpoint) throws IOException, URISyntaxException {
         return getText(endpoint, true);
     }
 
-    public static String getText(String endpoint, boolean useCache) throws IOException {
+    public static String getText(String endpoint, boolean useCache) throws IOException, URISyntaxException {
         String cachedResp;
         if (useCache && (cachedResp = cache.get(endpoint)) != null) {
             return cachedResp;
         }
-        URL url = new URL(endpoint);
+        URL url = new URI(endpoint).toURL();
         HttpURLConnection connection = (HttpURLConnection) url.openConnection();
         connection.setRequestMethod("GET");
         return receiveBufferString(endpoint, connection);
     }
 
-    public static JSONObject postJson(String endpoint, String json) throws IOException {
-        URL url = new URL(endpoint);
+    public static JSONObject postJson(String endpoint, String json) throws IOException, URISyntaxException {
+        URL url = new URI(endpoint).toURL();
         HttpURLConnection connection = (HttpURLConnection) url.openConnection();
         connection.setRequestMethod("POST");
         // https://www.baeldung.com/httpurlconnection-post
         writeOutputBuffer(endpoint, json, connection);
         return new JSONObject(receiveBufferString(endpoint, connection));
     }
-    public static JSONObject putJson(String endpoint, String json) throws IOException {
-        URL url = new URL(endpoint);
+    public static JSONObject putJson(String endpoint, String json) throws IOException, URISyntaxException {
+        URL url = new URI(endpoint).toURL();
         HttpURLConnection connection = (HttpURLConnection) url.openConnection();
         connection.setRequestMethod("PUT");
         // https://www.baeldung.com/httpurlconnection-post
@@ -73,10 +75,10 @@ public class WebRequests {
     }
 
 
-    public static JSONObject getJson(String endpoint) throws IOException {
+    public static JSONObject getJson(String endpoint) throws IOException, URISyntaxException {
         return new JSONObject(getText(endpoint));
     }
-    public static JSONArray getArray(String endpoint) throws IOException {
+    public static JSONArray getArray(String endpoint) throws IOException, URISyntaxException {
         return new JSONArray(getText(endpoint));
     }
 }
